2007-07-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el:
	* tramp-uu.el:
	* trampver.el: Use utf-8 encoding with coding cookie.

	* tramp-cache.el:
	* tramp-fish.el:
	* tramp-ftp.el:
	* tramp-gw.el:
	* tramp-smb.el: Remove coding cookie.

	* tramp.el (tramp-handle-verify-visited-file-modtime): Flush
	buffer file-name's file property.
	(tramp-handle-file-remote-p): The first parameter is FILENAME.

	* trampver.el: Update release number.

2007-07-29  Juri Linkov  <juri@jurta.org>

	* dired.el (dired-mode-map): Bind C-x C-q to dired-toggle-read-only.
	Filter out menu item "Edit File Names" `wdired-change-to-wdired-mode'
	when major-mode is not dired-mode.
	(dired-toggle-read-only): New function.
	(dired-recursive-deletes): Remove obsolete comments about old
	default value.
	(dired-do-flagged-delete, dired-do-delete): Refill docstring.

	* wdired.el (wdired-exit): New function.
	(wdired-mode-map): Bind C-x C-q to wdired-exit.

2007-07-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* cus-edit.el (customize-read-group): New fun.
	(customize-group-other-window, customize-face-other-window):
	Prompt before delegating to customize-(group|face).
	Bind pop-up-windows rather than use the other-window argument.
	(customize-group, customize-face): Prompt from the interactive spec.
	Remove args `prompt-for-group' and `other-window'.

	* emacs-lisp/advice.el (ad-interactive-form): Re-introduce.
	(ad-body-forms, ad-advised-interactive-form): Revert this part of
	last change.

2007-07-28  Masatake YAMATO  <jet@gyve.org>

	* vc.el (vc-dired-mode): Add a menu for VC related operation.
	Use backend name as the menu label Suggested by David Kastrup.

2007-07-28  Alan Mackenzie  <acm@muc.de>

	Fix problem with modes derived from CC Mode:
	* progmodes/cc-mode.el (c-make-emacs-variables-local): Move this
	macro to cc-langs.
	(c-init-language-vars-for): Remove call to above macro.
	* progmodes/cc-langs.el (c-make-emacs-variables-local): Macro has
	been moved to here.